Trying different php extension paths

--- a/conf/php.ini
+++ b/conf/php.ini
@@ -1902,5 +1902,4 @@ ldap.max_links = -1
 ; End:
 
 ; MongoDB config
-extension_dir = "/app/vendor/php/ext/"
-extension=mongo.so
+extension="/app/vendor/php/ext/mongo.so"
